# snake

./: .gitignore  main.py  pyproject.toml
.windsurf/: rules
snake/: collision_handler.py  event_handler.py  food.py  food_generator.py  game.py  game_state.py  menu.py  mode.py  player.py  power_up.py  renderer.py  settings.py  sprites.py  ui.py
snake/network/: __init__.py  client.py  models.py  network.py  server.py
snake/screen/: __init__.py
snake/screen/game/: __init__.py  multiplayer_game.py  network_multiplayer_game.py  single_player_game.py
snake/screen/menu/: __init__.py  main_menu.py  multiplayer_menu.py  pause_menu.py  settings_menu.py  single_player_menu.py
snake/state_menu/: __init__.py
snake/state_menu/state/: __init__.py  main_menu.py  single_player_menu.py
