[project]
name = "snake"
version = "0.1.0"
description = ""
authors = [
    {name = "Salim Ben Ahmed",email = "salim.benahmed2015@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "ruff (>=0.14.7,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snake = "main:main"